--- a/package.json
+++ b/package.json
@@ -10,20 +10,24 @@
   "author": "Beth Johnson",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^3.4.2",
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "@material-ui/core": "^4.0.0-rc.0",
+    "@material-ui/icons": "^4.9.1",
     "angular": "^1.6.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongoose": ">=5.7.5",
     "mysql": "^2.13.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
