--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
+    "mongodb": "^3.5.3",
     "mongoose": ">=5.7.5",
     "mysql": "^2.13.0",
     "react": "^16.12.0",
