--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.9.1",
     "angular": "^1.6.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.0",
     "jquery": "^3.1.1",
     "mongodb": "^3.5.3",
-    "mongoose": ">=5.7.5",
+    "mongoose": "^5.9.1",
     "mysql": "^2.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
