--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "@google-cloud/language": "^3.7.2",
     "@material-ui/core": "^4.0.0-rc.0",
     "@material-ui/icons": "^4.9.1",
     "angular": "^1.6.3",
